# zeus_rover

./: Emlid_Reach_GPS_setup.md  README.md  dependencies.repos  dependencies_https.repos  dependencies_ssh.repos  installation.sh  installation_dev.sh  installation_jetson.sh  installations.sh  jetson_xavier_nx_setup.md  md_README.html  multimaster_setup.md  port_permission.sh  robot_upstart_guide.md
steve_cam/: CMakeLists.txt  README.md  package.xml
steve_cam/config/: zed_common.yaml
steve_cam/launch/: aruco_detect.launch  back_camera.launch  camera.launch  fisheye_camera.launch  rtsp_stream.launch  web_video_server.launch  zed.launch
steve_control/: CMakeLists.txt  package.xml
steve_control/config/: RTIMULib.ini  global_ekf.yaml  local_ekf.yaml  mpu9250.yaml  rgbd_odometry.yaml  rgdb_odometry.yaml  twist_mux_topics.yaml  watchdog_topics.yaml
steve_control/launch/: base_controller.launch  base_station.launch  control.launch  gps.launch  imu.launch  motor_drivers.launch  mpu9250.launch  multi_master.launch  teleop_gamepad.launch  upstart.launch  upstart_jetson_nano.launch  upstart_jetson_xavier.launch  upstart_rpi.launch
steve_control/src/: magnetometer_orientation.py
steve_description/: CMakeLists.txt  package.xml
steve_description/urdf/: steve.urdf.xacro
steve_gazebo/: CMakeLists.txt  package.xml
steve_gazebo/launch/: spawn_steve.launch  spawn_steve_simple.launch  steve_empty_world.launch  steve_mars.launch  steve_mars1.launch  steve_mars2.launch  steve_playpen.launch  steve_zero_gravity.launch
steve_gazebo/models/empty/: model.sdf
steve_gazebo/models/jaggedrock/: model.config
steve_gazebo/models/rockformation/: model.config
steve_gazebo/worlds/: empty.world  mars2.world  zero_gravity.world
steve_nav/: CMakeLists.txt  README.md  package.xml  setup.py
steve_nav/config/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  planner.yaml
steve_nav/launch/: autonomous_navigation.launch  move_base.launch  obstacle_detector.launch  obstacle_detector_simple.launch  obstacle_detector_wo_ground.launch
steve_nav/msg/: list_gps_goals.msg
steve_nav/src/steve_nav/: multiple_gps_command.py
steve_rover/: installations.sh
steve_rover/steve_cam/config/: stream_setup.yaml
steve_rover/steve_cam/launch/: camera.launch
steve_rover/steve_control/config/: watchdog_topics.yaml
steve_rover/steve_description/: package.xml
steve_rover/steve_description/launch/: description.launch
steve_rover/steve_description/urdf/: steve.urdf.xacro
steve_rover/steve_gazebo/launch/: steve_empty_world.launch  steve_playpen.launch
steve_rover/steve_gazebo/worlds/: mars.world
steve_rover/steve_nav/config/: laserscan_parameters.yaml
steve_rover/steve_nav/launch/: obstacle_detector.launch
steve_rover/steve_viz/: README.md
steve_rover/steve_viz/config/: rviz.rviz
steve_rover/steve_viz/launch/: mapviz.launch  model_viewer.launch
steve_viz/: CMakeLists.txt  README.md  package.xml  test_coords.txt
steve_viz/config/: mapviz.config  rviz.rviz
steve_viz/launch/: mapviz.launch  model_viewer.launch  rviz.launch  standalone_mapviz.launch
steve_viz/msg/: CoordinateArray.msg
steve_viz/src/: coordinate_visualizer.py
zeus_cam/: CMakeLists.txt
zeus_cam/config/: xps15_7590_camera_info.yaml
zeus_cam/launch/: aruco_detect.launch  back_camera.launch  camera.launch  camera_calibration.launch  fisheye_camera.launch  rtsp_stream.launch  web_video_server.launch  zed.launch
zeus_control/: CMakeLists.txt
zeus_control/config/: global_ekf.yaml  local_ekf.yaml  twist_mux_locks.yaml
zeus_control/launch/: base_station.launch  control.launch  imu.launch  teleop_gamepad.launch  upstart_jetson_nano.launch  upstart_jetson_xavier.launch  upstart_rpi.launch
zeus_description/: CMakeLists.txt  README.md  package.xml
zeus_description/STL/: Z1-PRP-01-001.stl  bogie.stl  chassis.stl  differential.stl  rocker_left.stl  rocker_right.stl
zeus_description/config/: controllers.yaml  controllers_simple.yaml
zeus_description/launch/: description.launch  description_simple.launch
zeus_description/urdf/: simple.urdf.xacro  zeus.urdf.xacro
zeus_description/urdf/accessories/: realsense_d435.urdf.xacro  (+1 more)
zeus_gazebo/: CMakeLists.txt
zeus_gazebo/launch/: zeus_empty_world.launch  zeus_mars1.launch
zeus_gazebo/worlds/: mars1.world
zeus_nav/: CMakeLists.txt  package.xml
zeus_nav/config/: costmap_global.yaml  costmap_local.yaml  planner.yaml
zeus_nav/launch/: autonomous_navigation.launch  obstacle_detector_simple.launch
zeus_viz/: CMakeLists.txt  package.xml
zeus_viz/config/: model.rviz  rviz.rviz
zeus_viz/launch/: model_viewer.launch  rviz.launch  standalone_mapviz.launch
zeus_viz/msg/: CoordinateArray.msg
zeus_viz/src/: coordinate_visualizer.py  start_mapproxy.sh
(+4 files in other folders)
