<?xml version="1.0"?>
<package format="2">
  <name>zeus_cam</name>
  <version>0.0.0</version>
  <description>The zeus_cam package</description>

  <maintainer email="jeremie.bourque@usherbrooke.ca">Jeremie Bourque</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>video_stream_opencv</depend>
  <depend>web_video_server</depend>
  <depend>camera_calibration</depend>
  <depend>aruco_detect</depend>

  <export>
  </export>
  
</package>
