<?xml version="1.0"?>
<package format="2">
  <name>steve_control</name>
  <version>0.0.0</version>
  <description>The steve_control package</description>

  <maintainer email="jeremie.bourque@usherbrooke.ca">Jeremie Bourque</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>twist_mux</depend>
  <depend>robot_localization</depend>
  <depend>rtabmap_ros</depend>
  <depend>ddynamic_reconfigure_python</depend>
  <depend>nmea_navsat_driver</depend>
  <depend>socketcan_bridge</depend>
  <depend>multimaster_fkie</depend>
  <depend>robot_upstart</depend>

  <export>
  </export>
</package>
