<?xml version="1.0"?>
<package format="2">
  <name>steve_gazebo</name>
  <version>0.0.0</version>
  <description>The steve_gazebo package</description>

  <maintainer email="jeremie.bourque@usherbrooke.ca">Jeremie Bourque</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros_control</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>hector_gazebo_plugins</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>

</package>
