<?xml version="1.0"?>
<package format="2">
  <name>steve_nav</name>
  <version>0.0.0</version>
  <description>The steve_nav package</description>

  <maintainer email="loic.boileau@usherbrooke.ca">Loic Boileau</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pointcloud_to_laserscan</depend>

  <export>
  </export>

</package>
