<?xml version="1.0"?>
<package format="2">
  <name>steve_viz</name>
  <version>0.0.0</version>
  <description>The steve_viz package</description>

  <maintainer email="jeremie.bourque@usherbrooke.ca">Jeremie Bourque</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>mapviz</depend>
  <depend>mapviz_plugins</depend>
  <depend>tile_map</depend>
  <depend>multires_image</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>

  <export>
  </export>
</package>
